# Agents-for-Finance

./: .dockerignore  .gitignore  LICENSE  README.md  deep_research.py  docker-compose.yml  dockerfile  langgraph.json  lint.cmd  pyproject.toml  testing.py
dumps/notebooks/: data_collection.ipynb  db.ipynb  kb_autonomy.ipynb  knowledge_bases.ipynb  scratchpad.ipynb  workflow.ipynb
dumps/output/: simple_agent_v1.1.md
notebooks/: db.ipynb  deep_agents.ipynb  knowledge_bases.ipynb  parsing.ipynb  scratchpad.ipynb
notebooks/reports/: custom_inst_deep_agent.md  prebuilt_deep_agent.md
src/: app.py
src/agents/: clients.py  forecast_agent.py  models.py  simple_agent.py
src/agents/utils/: llm.py  models.py  prompts.py  services.py  sql_models.py  tools.py
src/api/: routes.py
